# autocodec

./: Cargo.toml  README.md
autocodec_derive/: Cargo.toml
autocodec_derive/src/: lib.rs
src/: lib.rs
tests/: integration.rs
