[package]
name = "autocodec_derive"
version = "0.1.0"
edition = "2024"
description = "Derive macro implementation for autocodec"
license = "MIT"
repository = "https://github.com/MichaelDuPlessis/autocodec"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
